--- a/TwitterIrcGateway/App.config
+++ b/TwitterIrcGateway/App.config
@@ -71,11 +71,11 @@
                 <value>False</value>
             </setting>
             <setting name="OAuthClientKey" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="OAuthSecretKey" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </Misuzilla.Applications.TwitterIrcGateway.Settings>
     </userSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup></configuration>
